implementing babel-node & nuxt preset
Signed-off-by: santiago riveros <“santiago.riveros@gmail.com”>

--- a/template/nuxt-service/Dockerfile
+++ b/template/nuxt-service/Dockerfile
@@ -9,6 +9,8 @@ ENV APP_ROOT /home/app
 COPY --from=watchdog /fwatchdog /usr/bin/fwatchdog
 RUN chmod +x /usr/bin/fwatchdog
 
+RUN npm install --save-dev @babel/core@~7.6.0 @babel/node@~7.6.1 @nuxt/babel-preset-app-edge
+
 RUN apk --no-cache add ca-certificates
 
 WORKDIR /root/
@@ -36,13 +38,13 @@ RUN npm i
 RUN npm run build
 
 ENV cgi_headers="true"
-ENV fprocess="node .nuxt/server.js"
+ENV fprocess="babel-node --presets=@nuxt/babel-preset-app-edge server.js"
 ENV mode="http"
 ENV upstream_url="http://127.0.0.1:3000"
 
-ENV exec_timeout="10s"
-ENV write_timeout="15s"
-ENV read_timeout="15s"
+ENV exec_timeout="20s"
+ENV write_timeout="33s"
+ENV read_timeout="33s"
 
 HEALTHCHECK --interval=3s CMD [ -e /tmp/.lock ] || exit 1
 
