--- a/template/nuxt-service/Dockerfile
+++ b/template/nuxt-service/Dockerfile
@@ -33,10 +33,10 @@ WORKDIR ${APP_ROOT}/
 RUN rm -rf node_modules/ && npm i
 RUN npm run build
 
-ENV cgi_headers="true"
+#ENV cgi_headers="true"
 ENV fprocess="babel-node --presets=@nuxt/babel-preset-app-edge .nuxt/server.js"
-ENV mode="http"
-ENV upstream_url="http://127.0.0.1:3000"
+#ENV mode="http"
+#ENV upstream_url="http://127.0.0.1:3000"
 EXPOSE 3000
 #ENV exec_timeout="10s"
 #ENV write_timeout="15s"
