--- a/template/nuxt-service/package.json
+++ b/template/nuxt-service/package.json
@@ -17,7 +17,8 @@
     "express": "^4.17.1",
     "nuxt": "^2.0.0",
     "@nuxtjs/axios": "^5.3.6",
-    "@nuxtjs/pwa": "^3.0.0-0"
+    "@nuxtjs/pwa": "^3.0.0-0",
+    "@nuxt/babel-preset-app-edge": "^2.10.0"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.0.0",
