--- a/template/nuxt-service/Dockerfile
+++ b/template/nuxt-service/Dockerfile
@@ -36,9 +36,9 @@ RUN rm -rf node_modules/ ; rm package-lock.json; npm i
 RUN npm run build
 
 #ENV cgi_headers="true"
-ENV fprocess="node -r esm .nuxt/server.js"
-#ENV mode="http"
-#ENV upstream_url="http://127.0.0.1:3000"
+ENV fprocess="npm start"
+ENV mode="http"
+ENV upstream_url="http://127.0.0.1:3000"
 EXPOSE 3000
 #ENV exec_timeout="10s"
 #ENV write_timeout="15s"
