--- a/template/nuxt-service/package.json
+++ b/template/nuxt-service/package.json
@@ -22,11 +22,6 @@
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.0.0",
     "@vue/test-utils": "^1.0.0-beta.27",
-    "ava": "^2.2.0",
-    "babel-plugin-module-resolver": "^3.2.0",
-    "browser-env": "^3.2.5",
-    "require-extension-hooks": "^0.3.3",
-    "require-extension-hooks-babel": "^1.0.0",
-    "require-extension-hooks-vue": "^2.0.0"
+    "ava": "^2.2.0"
   }
 }
