--- a/template/nuxt-service/function/app/package.json
+++ b/template/nuxt-service/function/app/package.json
@@ -12,16 +12,16 @@
     "test": "ava"
   },
   "dependencies": {
-    "nuxt": "^2.0.0",
-    "@nuxtjs/axios": "^5.3.6",
-    "@nuxtjs/pwa": "^3.0.0-0"
+    "@nuxtjs/axios": "^5.8.0",
+    "@nuxtjs/pwa": "^3.0.0-0",
+    "nuxt": "^2.10.2"
   },
   "devDependencies": {
-    "@nuxtjs/vuetify": "^1.0.0",
-    "@vue/test-utils": "^1.0.0-beta.27",
+    "@nuxtjs/vuetify": "^1.9.1",
+    "@vue/test-utils": "^1.0.0-beta.30",
     "ava": "^2.2.0",
     "babel-plugin-module-resolver": "^3.2.0",
-    "browser-env": "^3.2.5",
+    "browser-env": "^3.3.0",
     "require-extension-hooks": "^0.3.3",
     "require-extension-hooks-babel": "^1.0.0",
     "require-extension-hooks-vue": "^2.0.0"
