--- a/template/nuxt-service/function/app/package.json
+++ b/template/nuxt-service/function/app/package.json
@@ -12,13 +12,13 @@
     "test": "ava"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.8.0",
-    "@nuxtjs/pwa": "^3.0.0-0",
-    "nuxt": "^2.10.2"
+    "@nuxtjs/axios": "^5.9.7",
+    "@nuxtjs/pwa": "^3.0.0-beta.20",
+    "nuxt": "^2.12.2"
   },
   "devDependencies": {
-    "@nuxtjs/vuetify": "^1.9.1",
-    "@vue/test-utils": "^1.0.0-beta.30",
+    "@nuxtjs/vuetify": "^1.11.0",
+    "@vue/test-utils": "^1.0.0-beta.32",
     "ava": "^2.2.0",
     "babel-plugin-module-resolver": "^3.2.0",
     "browser-env": "^3.3.0",
